Fix bulk unboxing statistics position on Safari

--- a/css/main.scss
+++ b/css/main.scss
@@ -1741,7 +1741,6 @@ div.visible {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 
     table {
         margin: 1vh 0;
